test/tests/stages/18_structures/valid/extra_credit/semantic_analysis/union_self_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[46]:
  union
  identifier(self_ptr)
  {
  union
  identifier(self_ptr)
  *
  identifier(ptr)
  ;
  long
  identifier(l)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(self_ptr)
  identifier(u)
  =
  {
  &
  identifier(u)
  }
  ;
  if
  (
  &
  identifier(u)
  !=
  identifier(u)
  .
  identifier(ptr)
  )
  {
  return
  const int(1)
  ;
  }
  return
  const int(0)
  ;
  }
