test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_scalar_union_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  static
  union
  identifier(u)
  identifier(my_union)
  =
  const int(1)
  ;
  return
  const int(0)
  ;
  }
